objects/User_Management__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This custom setting is used to validate only authorized profile can edit certain object or fields</description>
    <fields>
        <fullName>Allow_Change_Customer_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Change Customer Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Change_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Manual Change Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Change_Prospect_Non_SME_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Change Prospect / Non-SME Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Event_Name_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Event Name Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Name_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Name Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Update_Call_Report_ActualVisitDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Update Call Report ActualVisitDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_User_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow User Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_allow_Update_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not allow Update Prospect</label>
        <type>Checkbox</type>
    </fields>
    <label>User Management</label>
</CustomObject>